--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>I understand numbers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="index.css" rel="stylesheet" type="text/css">
     <script src="main.js"></script>
 </head>
 <body>
-    <h1>Hello there</h1>
+    <h1>Draw me a number to read</h1>
+    <canvas id="myCanvas" height="200" width="200"></canvas><br>
+    <button type="button" class="button guessButton">Who am I?</button> 
+    <button type="button" class="button clearButton" >Clear</button>
 </body>
 </html>
