changed canvas to black background

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <div id="accuracyCanvas"></div>
         </div>
     </div>
+    <div id="images"></div>
     <script src="main.js"></script>
 </body>
 
