--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <h2>My guess is
         <label id="guessNumber"></label>
     </h2>
+    <!-- <input type="file" id="modelFile">
+    <input type="file" id="weightsFile">
+    <button type="button" class="button" id="addModelButton">Add Model</button> -->
     <div id="status">Loading data...</div>
     <div id="message"></div>
 
