not showing accuracy graph for pretairained model

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- <input type="file" id="modelFile">
     <input type="file" id="weightsFile">
     <button type="button" class="button" id="addModelButton">Add Model</button> -->
-    <div id="status">Loading data...</div>
+    <!-- <div id="status">Loading data...</div>
     <div id="message"></div>
 
     <div id="stats">
@@ -35,7 +35,7 @@
             <div id="accuracyCanvas"></div>
         </div>
     </div>
-    <div id="images"></div>
+    <div id="images"></div> -->
     <script src="main.js"></script>
 </body>
 
